# zephyr-tfm-hello

./: CMakeLists.txt
hello_world/: CMakeLists.txt  hello_world.c  tfm_hello_world.yaml  tfm_manifest_list.yaml.in
src/: main.c
